--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-<section class="header4 cid-rcu519jXqT mbr-fullscreen mbr-parallax-background" id="header4-5" data-rv-view="5">
+<section class="header4 cid-rcu519jXqT mbr-fullscreen mbr-parallax-background" id="header4-5" data-rv-view="11">
 
     
 
@@ -39,14 +39,14 @@
             </div>
         
             <div class="mbr-figure pt-5" style="width: 35%;">
-                <img src="assets/images/cheryl-1600x1066.jpg" alt="Mobirise" title="" media-simple="true">
+                <img style="width = 30vw;" src="assets/images/cheryl-1600x1066.jpg" alt="Mobirise" title="" media-simple="true">
             </div>
         </div>
     </div>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/g">create your own website for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
